// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopoverWidth snapshots should render PopoverWidth 1`] = `
<DocumentFragment>
  <div
    class="css-1wfopar PopoverItem PopoverItem--light"
    data-test-box=""
    data-test-popover-item="0"
  >
    <div
      class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light PopoverItem__checkIcon--selected PopoverItem__checkIcon--selected--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
      data-test-icon="fixed-width"
      height="12"
      name="FixedWidth"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
      data-test-text=""
      style="text-align: inherit;"
    >
      Fixed width
    </small>
  </div>
  <div
    class="css-1wfopar PopoverItem PopoverItem--light"
    data-test-box=""
    data-test-popover-item="1"
  >
    <div
      class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
      data-test-icon="auto-width"
      height="12"
      name="AutoWidth"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
      data-test-text=""
      style="text-align: inherit;"
    >
      Auto width
    </small>
  </div>
  <div
    class="css-1wfopar PopoverItem PopoverItem--light"
    data-test-box=""
    data-test-popover-item="2"
  >
    <div
      class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
      data-test-icon="percentage"
      height="12"
      name="Percentage"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
      data-test-text=""
      style="text-align: inherit;"
    >
      Percentage
    </small>
  </div>
  <div
    class="css-qef3st"
    data-test-box=""
  />
  <div
    class="css-1wfopar PopoverItem PopoverItem--light"
    data-test-box=""
    data-test-popover-item="3"
  >
    <div
      class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
      data-test-icon="min-width"
      height="12"
      name="MinWidth"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
      data-test-text=""
      style="text-align: inherit;"
    >
      Add min width...
    </small>
  </div>
  <div
    class="css-1wfopar PopoverItem PopoverItem--light"
    data-test-box=""
    data-test-popover-item="4"
  >
    <div
      class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
      data-test-icon="max-width"
      height="12"
      name="MaxWidth"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
      data-test-text=""
      style="text-align: inherit;"
    >
      Add max width...
    </small>
  </div>
</DocumentFragment>
`;

exports[`PopoverWidth snapshots should render wiht mixed value 1`] = `
<DocumentFragment>
  <div
    class="css-1wfopar PopoverItem PopoverItem--light"
    data-test-box=""
    data-test-popover-item="0"
  >
    <div
      class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
      data-test-icon="fixed-width"
      height="12"
      name="FixedWidth"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
      data-test-text=""
      style="text-align: inherit;"
    >
      Fixed width
    </small>
  </div>
  <div
    class="css-1wfopar PopoverItem PopoverItem--light"
    data-test-box=""
    data-test-popover-item="1"
  >
    <div
      class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
      data-test-icon="auto-width"
      height="12"
      name="AutoWidth"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
      data-test-text=""
      style="text-align: inherit;"
    >
      Auto width
    </small>
  </div>
  <div
    class="css-1wfopar PopoverItem PopoverItem--light"
    data-test-box=""
    data-test-popover-item="2"
  >
    <div
      class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
      data-test-icon="percentage"
      height="12"
      name="Percentage"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
      data-test-text=""
      style="text-align: inherit;"
    >
      Percentage
    </small>
  </div>
</DocumentFragment>
`;
